All compiler errors fixed for 1.21. Now to fix the crashes...